# netbox_cc_dayn

./: .env.example  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  mappings.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
app/: __init__.py  config.py  dayn_csv.py  main.py  mapper.py  matcher.py  models.py  netbox_client.py  resolvers.py  runtime_settings.py  store.py
app/static/: style.css
app/templates/: base.html  error.html  review.html  settings.html  upload.html
app/templates/partials/: review_body.html  test_result.html
tests/: conftest.py  test_api.py  test_dayn_csv.py  test_mapper.py  test_matcher.py  test_perf.py  test_resolvers.py  test_settings.py
tests/fixtures/: All_templates.csv
